[metadata]
author=Rohan
description=Inference Evaluation Metric Helper
name=yld-utils

[options]
packages=find:
package_dir=
    =src
zip_safe=False
install_requires=
    pandas==2.2.3

[options.packages.find]
where=src
exclude=build


[options.extras_require]
check=
    ruff==0.5.5
testing=
    pytest==8.3.3
